Add task automation via gulp

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,3 +4,4 @@
       content="width=device-width, initial-scale=1, user-scalable=no">
 <body></body>
 <script src="app.js"></script>
+<script>Elm.fullscreen(Elm.Main)</script>
